Refactor reporting module to utilize CohortUtil for member ID retrieval
- Updated PersonDataUtil to use CohortUtil for member ID operations.
- Refactored PersonIdDataEvaluator to leverage CohortUtil for base cohort member IDs.
- Modified LazyPageableDataSet to utilize CohortUtil for patient ID retrieval.
- Adjusted DataSetUtil to write output using default charset.
- Enhanced LogicDataSetEvaluator to use CohortUtil for member IDs and improved logic handling.
- Updated PatientDataSetEvaluator to utilize CohortUtil for member ID operations.
- Refined SqlFileDataSetEvaluator to handle errors with StringUtils.
- Improved HibernateDataSetQueryDAO to use CohortUtil for parameter setting.
- Updated EvaluationContext to use CohortUtil for patient ID set creation.
- Refactored HqlQueryBuilder to utilize CohortUtil for member ID retrieval.
- Enhanced CohortIndicatorResult to use CohortUtil for logic value filtering.
- Updated CohortIndicatorAndDimensionResult to utilize CohortUtil for member ID operations.
- Refactored CohortIndicatorEvaluator to use CohortUtil for denominator cohort handling.
- Updated PatientPersonQueryEvaluator to utilize CohortUtil for member ID retrieval.
- Refined ReportServiceImpl to handle reflective operations more cleanly.
- Updated CollectionCompatibility and CollectionCompatibilityConverter for improved type safety.
- Added unit tests for CollectionCompatibilityConverter to ensure correct behavior.